--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,7 @@
 # Change these first
 owner: Soldierplayz6867 # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
+theme: dark
 
 sites:
   - name: Google
