--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -72,4 +72,4 @@ i18n:
   incidentBack: ← 返回至所有事件
   pastIncidents: 過去事件
   pastIncidentsResolved: 處理共 $MINUTES 分鐘，共有 $POSTS 則貼文
-  footer: Copyright © 2022-2022 Backup Mode. All Rights Reserved.
+  footer: 版權所有 © 2022-2023 胖達工作室
