--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,7 +11,8 @@ status-website:
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: uptime.soldierplayz.site
   # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://i0.wp.com/soldierplayz.site/wp-content/uploads/2022/08/cropped-image.png
+  favicon: https://i0.wp.com/soldierplayz.site/wp-content/uploads/2022/08/cropped-image.png
   name: Upptime
   theme: dark
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
@@ -19,8 +20,6 @@ status-website:
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
