--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,12 @@ owner: Soldierplayz6867 # Your GitHub organization or username, where this repos
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: 首頁
+    url: https://home.soldierplayz.site
+  - name: 部落格
+    url: https://soldierplayz.site
+  - name: 個人頁面
+    url: https://me.soldierplayz.site
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
